--- a/07boot_company/index.html
+++ b/07boot_company/index.html
@@ -225,7 +225,7 @@
         </div>
     </div>
     <div class="product mb-2">
-        <div class="container-fluid">
+        <div class="container">
             <h5 class="mb-3">라인별 컬렉션</h5>
             <div class="row mb-3">
                 <div class="swiper-container swiper col-md-12">
@@ -251,7 +251,7 @@
                 <div class="swiper-prev d-none d-md-block"></div>
             </div>
         </div>
-        <div class="container-fluid">
+        <div class="container">
             <h5 class="mb-3">주제별 컬렉션</h5>
             <div class="row">
                 <div class="swiper-container swiper col-md-12">
@@ -278,11 +278,11 @@
             </div>
         </div>
     </div>
-    <div class="box row mb-5">
+    <div class="box row mb-5 text-center" style="width: 100%;">
         <div class="col-md-10 offset-md-1">
-            <div class="video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/jR_7ordoU1Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <div class="col-md-12 text-center">
+            <div class="video text-center" style="float: none; margin:0 auto;">
+                <iframe width="1000" height="315" src="https://www.youtube.com/embed/jR_7ordoU1Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <div class="text-center">
                     <h5>록시땅의 친환경 ECO MERCI 박스</h5>
                     <p>록시땅 공식몰에서 주문하신 제품은 플라스틱 테이프와 완충제를 사용하지 않아 박스부터 포장지까지 100% 재활용이 가능한 포장박스로 배송됩니다.</p>
                 </div>
